--- a/projets.html
+++ b/projets.html
@@ -31,8 +31,8 @@
   <div class="columns">
     <div >
       <h2> 서울시립대학교 통계학과 <a href="http://ranking.uos.ac.kr/"> 전종준</a> 교수님 연구실 </h2>
-
-
+      <p> <a href= "https://monster-moon.github.io/">문상준 </a><p>
+      <p> <a href ="https://chulhongsung.github.io/">홍성철 </a><p>
     </div>
     <div class="img-second"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
   </div>
