--- a/projets.html
+++ b/projets.html
@@ -28,32 +28,16 @@
   <div class="text-intro">
     <h2>LAB WORKS</h2>
   </div>
-  <div class="row">
-    <div class="col-lg-7 col-sm-5">
-   <div class="flipInX wow animated">
-    <img class="img-responsive" src="img/side-bg.jpg" alt="">
-   </div>
-</div>
-    <div class="col-lg-5 col-sm-7">
-      <div class="top_left_cont flipInY wow animated">
-        <h3>Bootstrap &amp; Multipurpose!</h3>
-        <h2>Lumia Most Amazing Theme
-          That Ever Made</h2>
-        <p> Accusantium quam, aliquam ultricies eget tempor id, aliquam eget nibh et. Maecen aliquam, risus at semper. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum.
-  Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum.Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum.
-  </p>
-        <a href="#service" class="learn_more2">Learn more</a> </div>
-    </div>
-  </div>
-
-  <div class="columns">
-    <div >
+  <div class="columns features">
+    <div class = "one-half">
       <h2> 서울시립대학교 통계학과 <a href="http://ranking.uos.ac.kr/"> 전종준</a> 교수님 연구실 </h2>
       <p> <a href= "https://monster-moon.github.io/">문상준 </a><p>
       <p> <a href ="https://chulhongsung.github.io/">홍성철 </a><p>
     </div>
-    <div class="img-second"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
-  </div>
+    <div class = "one-half">
+      <div class="imgeff"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
+    </div>
+  </div>  
 </section>
 </body>
 </html>
