--- a/projets.html
+++ b/projets.html
@@ -29,15 +29,15 @@
     <h2>LAB WORKS</h2>
   </div>
   <div class="columns features">
-    <div class = "one-half">
+    <div class = "second-left">
       <h2> 서울시립대학교 통계학과 <a href="http://ranking.uos.ac.kr/"> 전종준</a> 교수님 연구실 </h2>
       <p> <a href= "https://monster-moon.github.io/">문상준 </a><p>
       <p> <a href ="https://chulhongsung.github.io/">홍성철 </a><p>
     </div>
-    <div class = "one-half">
+    <div class = "second-right">
       <div class="imgeff"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
     </div>
-  </div>  
+  </div>
 </section>
 </body>
 </html>
