--- a/projets.html
+++ b/projets.html
@@ -28,9 +28,9 @@
   <div class="text-intro">
     <h2>LAB WORKS</h2>
   </div>
-  <div class="columns features">
+  <div class="columns">
     <div class = "second-left">
-      <h2> 서울시립대학교 통계학과 <a href="http://ranking.uos.ac.kr/"> 전종준</a> 교수님 연구실 </h2>
+      <h2> 서울시립대학교 통계학과 fff <a href="http://ranking.uos.ac.kr/"> 전종준</a> 교수님 연구실 </h2>
       <p> <a href= "https://monster-moon.github.io/">문상준 </a><p>
       <p> <a href ="https://chulhongsung.github.io/">홍성철 </a><p>
     </div>
