--- a/projets.html
+++ b/projets.html
@@ -34,8 +34,8 @@
       <p> <a href= "https://monster-moon.github.io/">문상준 </a><p>
       <p> <a href ="https://chulhongsung.github.io/">홍성철 </a><p>
     </div>
-    <div class = "second-right">
-      <div class="imgeff"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
+    <div class = "second-right imgeff">
+      <a href="#"><img src="images/shanghai.jpg" alt=""></a>
     </div>
   </div>
 </section>
