--- a/projets.html
+++ b/projets.html
@@ -28,16 +28,34 @@
   <div class="text-intro">
     <h2>LAB WORKS</h2>
   </div>
-  <div class="columns">
-    <div class = "second-left">
-      <h1> 서울시립대학교 통계학과 fff <a href="http://ranking.uos.ac.kr/"> 전종준</a> 교수님 연구실 </h1>
-      <p> <a href= "https://monster-moon.github.io/">문상준 </a><p>
-      <p> <a href ="https://chulhongsung.github.io/">홍성철 </a><p>
+    <div class = "columns">
+        <div class = "one-half"> <a href="#"><img src="images/shanghai.jpg" alt=""></a> </div>
+        <div class="one-half">
+            <div class="row second-up">
+                <div class="one-half"><a href="#"><img src="images/fam1.png" width=350px height=230px alt=""></a>
+                    <p>Hello</p><p>Bye</p></div>
+                <div class="one-half"><a href="#"><img src="images/fam2.jpg" width=350px height=230px alt=""></a></div>
+            </div>
+            <div class="row second-up">
+                <div class="one-half"><a href="#"><img src="images/fam3.png" width=350px height=230px alt=""></a></div>
+                <div class="one-half"><a href="#"><img src="images/fam2.jpg" width=350px height=230px alt=""></a></div>
+            </div>            
+        </div>
     </div>
-    <div class = "second-right imgeff">
-      <a href="#"><img src="images/shanghai.jpg" alt=""></a>
-    </div>
-  </div>
+<div>
+ <br clear=left>
+ <p>가낟라마바사아</p>
+</div>
+        <div class="team-leader wow fadeInDown delay-03s">
+          <div class="team-leader-shadow"><a href="javascript:void(0)"></a></div>
+          <img src="img/team-leader-pic1.jpg" alt="">
+          <ul>
+            <li><a href="javascript:void(0)" class="fa-twitter"></a></li>
+            <li><a href="javascript:void(0)" class="fa-facebook"></a></li>
+            <li><a href="javascript:void(0)" class="fa-pinterest"></a></li>
+            <li><a href="javascript:void(0)" class="fa-google-plus"></a></li>
+          </ul>
+        </div>    
 </section>
 </body>
 </html>
