--- a/projets.html
+++ b/projets.html
@@ -26,19 +26,45 @@
 </section>
 <section id="main-content">
   <div class="text-intro">
-    <h2>LAB WORKS</h2>
+    <h2>FAMILY</h2>
+  </div>
+  <div class = "line-bottom">
+    <h2>GITHUB WORKS</h2>
   </div>
     <div class = "columns">
-        <div class = "one-half"> <a href="#"><img src="images/shanghai.jpg" alt=""></a> </div>
+        <div class = "one-half imgeff"><img src="images/shanghai.jpg" alt=""></div>
         <div class="one-half">
             <div class="row second-up">
-                <div class="one-half"><a href="#"><img src="images/fam1.png" width=350px height=230px alt=""></a>
-                    <p>Hello</p><p>Bye</p></div>
-                <div class="one-half"><a href="#"><img src="images/fam2.jpg" width=350px height=230px alt=""></a></div>
+                <div class="one-half"><img src="images/img_moon.png" width=350px height=230px alt="">
+                    <div class = "line-family">
+                        <h2>문상준
+                            <a href="https://monster-moon.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> 
+                        </h2>
+                    </div>
+                </div>
+                <div class="one-half"><img src="images/img_cho.png" width=350px height=230px alt="">
+                     <div class = "line-family">
+                         <h2>조연선
+                             <a href="https://dustjs17.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> 
+                         </h2>
+                    </div>
+                </div>
             </div>
             <div class="row second-up">
-                <div class="one-half"><a href="#"><img src="images/fam3.png" width=350px height=230px alt=""></a></div>
-                <div class="one-half"><a href="#"><img src="images/fam2.jpg" width=350px height=230px alt=""></a></div>
+                <div class="one-half"><img src="images/img_hong.png" width=350px height=230px alt="">
+                    <div class = "line-family">
+                        <h2>홍성철
+                          <a href="https://chulhongsung.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> 
+                        </h2>
+                    </div>
+                </div>
+                <div class="one-half"><img src="images/img_ko.png" width=350px height=230px alt="">
+                     <div class = "line-family">
+                         <h2>고은영
+                             <a href="https://key9187.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a>                              
+                         </h2>
+                    </div>
+                </div>
             </div>            
         </div>
     </div>
@@ -46,16 +72,6 @@
  <br clear=left>
  <p>가낟라마바사아</p>
 </div>
-        <div class="team-leader wow fadeInDown delay-03s">
-          <div class="team-leader-shadow"><a href="javascript:void(0)"></a></div>
-          <img src="img/team-leader-pic1.jpg" alt="">
-          <ul>
-            <li><a href="javascript:void(0)" class="fa-twitter"></a></li>
-            <li><a href="javascript:void(0)" class="fa-facebook"></a></li>
-            <li><a href="javascript:void(0)" class="fa-pinterest"></a></li>
-            <li><a href="javascript:void(0)" class="fa-google-plus"></a></li>
-          </ul>
-        </div>    
 </section>
 </body>
 </html>
