--- a/projets.html
+++ b/projets.html
@@ -26,10 +26,17 @@
 </section>
 <section id="main-content">
   <div class="text-intro">
-    <h2>FAMILY</h2>
+    <h2>LAB WORKS</h2>
   </div>
+  <div>
+    <li> 가나다라 </li>
+    <li> 마바사아 </li>
+    <li> 자차카타 </li>
+  </div>
+
+    
   <div class = "line-bottom">
-    <h2>GITHUB WORKS</h2>
+    <h2>FAMILY</h2>
   </div>
     <div class = "columns">
         <div class = "one-half imgeff"><img src="images/shanghai.jpg" alt=""></div>
