--- a/projets.html
+++ b/projets.html
@@ -44,7 +44,7 @@
             <div class="row second-up">
                 <div class="one-half"><img src="images/img_moon.png" width=350px height=230px alt="">
                     <div class = "line-family">
-                        <h2>문상준
+                        <h2 align="center">문상준
                             <a href="https://monster-moon.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> 
                         </h2>
                     </div>
