--- a/projets.html
+++ b/projets.html
@@ -33,8 +33,6 @@
     <li> 마바사아 </li>
     <li> 자차카타 </li>
   </div>
-
-    
   <div class = "line-bottom">
     <h2>FAMILY</h2>
   </div>
@@ -44,7 +42,7 @@
             <div class="row second-up">
                 <div class="one-half"><img src="images/img_moon.png" width=350px height=230px alt="">
                     <div class = "line-family">
-                        <h2 align="center">문상준
+                        <h2>문상준
                             <a href="https://monster-moon.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> 
                         </h2>
                     </div>
