--- a/projets.html
+++ b/projets.html
@@ -28,11 +28,17 @@
   <div class="text-intro">
     <h2>LAB WORKS</h2>
   </div>
-  <div>
-    <li> 가나다라 </li>
-    <li> 마바사아 </li>
-    <li> 자차카타 </li>
-  </div>
+    <div class="colunms">
+        <div class="two-third">
+            <br clear=left>
+            <li> 가나다라 </li>
+            <li> 마바사아 </li>
+            <li> 자차카타 </li>
+        </div>
+        <div class="one-third">
+            음
+        </div>
+    </div>
   <div class = "line-bottom">
     <h2>FAMILY</h2>
   </div>
