--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
 <link rel="stylesheet" href="css/github-activity-0.1.5.min.css">
     
+<!--google font style-->    
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
+
+<!--font-family: 'Metrophobic', serif;-->
+<link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,600,400italic,600italic' rel='stylesheet' type='text/css'> 
+
 <!--font-family: 'Open Sans', sans-serif;-->
 <!-- font icon css style-->
-<link rel="stylesheet" href="css/font-open-sans.css">
+<link rel="stylesheet" href="css/font-awesome.min.css">
         
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
 <script type="text/javascript" src="js/github-activity-0.1.5.min.js"></script>
