--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
 <!--google font style-->    
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
 
-<!--font-family: 'Metrophobic', serif;-->
-<link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,600,400italic,600italic' rel='stylesheet' type='text/css'> 
-
 <!--font-family: 'Open Sans', sans-serif;-->
 <!-- font icon css style-->
-<link rel="stylesheet" href="css/font-awesome.min.css">
+<link rel="stylesheet" href="css/open-sans-v15-latin.min.css">
         
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
 <script type="text/javascript" src="js/github-activity-0.1.5.min.js"></script>
