--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,11 @@
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="shortcut icon" type="image⁄x-icon" href="images/homepage.png">
+<!--google font style-->    
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
+<!--font-family: 'Open Sans', sans-serif;-->
+<!-- font icon css style-->
+<link rel="stylesheet" href="css/open-sans-v15-latin.min.css">    
 </head>
 <body>
 <header>
