--- a/projets.html
+++ b/projets.html
@@ -10,6 +10,11 @@
 <link rel="stylesheet" href="css/github-activity-0.1.5.min.css">
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
 <script type="text/javascript" src="js/github-activity-0.1.5.min.js"></script>
+<!--google font style-->    
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
+<!--font-family: 'Open Sans', sans-serif;-
+<!-- font icon css style-->
+<link rel="stylesheet" href="css/open-sans-v15-latin.min.css">       
 </head>
 <body>
 <header>
@@ -31,7 +36,7 @@
     <div class="colunms">
         <div class="two-third">
             <br clear=left>
-            <li> 가나다라 </li>
+            <li> 09/20/2018, IJeong Han, For Github Desktop beginner, <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
             <li> 마바사아 </li>
             <li> 자차카타 </li>
         </div>
@@ -40,7 +45,7 @@
         </div>
     </div>
   <div class = "line-bottom">
-    <h2>FAMILY</h2>
+    <h2>LAB FAMILY</h2>
   </div>
     <div class = "columns">
         <div class = "one-half imgeff"><img src="images/shanghai.jpg" alt=""></div>
