--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       <li>
         <ul>
           <li><a href="index.html" class="active">about</a></li>
-          <li><a href="projets.html">works</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="projets.html">lab</a></li>
         </ul>
       </li>
     </ul>
@@ -61,7 +60,7 @@
       <img src="images/graduate_2jeong.png" alt="" align="left">
       <h3>Education</h3>
       <br clear=left>
-        <p>Master's Course of Statistics(2018.3~) </p>
+        <p>Master's Course of Statistics (2018.3~) </p>
         <p>University of Seoul</p>
         <p>Bachelor Degrees of Statistics (2014.3~2018.2)</p>
         <p>Dongguk University </p>
