--- a/projets.html
+++ b/projets.html
@@ -21,8 +21,7 @@
   <nav class="main-nav">
     <ul>
       <li><a href="index.html">about</a></li>
-      <li><a href="projets.html" class="active">works</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="projets.html" class="active">lab</a></li>
     </ul>
   </nav>
 </header>
@@ -31,63 +30,68 @@
 </section>
 <section id="main-content">
   <div class="text-intro">
-    <h2>LAB WORKS</h2>
+    <h2>WORKS</h2>
   </div>
     <div class="colunms">
         <div class="two-third">
             <br clear=left>
             <li> 09/20/2018, IJeong Han, For Github Desktop beginner, <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
-            <li> 마바사아 </li>
-            <li> 자차카타 </li>
         </div>
         <div class="one-third">
-            음
+            
         </div>
     </div>
   <div class = "line-bottom">
-    <h2>LAB FAMILY</h2>
+    <h2>FAMILY</h2>
+  </div>
+  <div class="colmuns">
+      <br clear=left>
+      <div class="one-third">
+        <img src="images/img_jeon.png" width=270px height=270px alt="">
+        <div class = "line-family"><h2>전종준 교수님
+        <a href="http://ranking.uos.ac.kr/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
+        </div>
+      </div>
+      <div class="one-third">
+        <img src="images/img_moon.png" width=270px height=270px alt="">
+        <div class = "line-family"><h2>문상준
+        <a href="http://ranking.uos.ac.kr/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
+        </div>
+      </div>
+      <div class="one-third">
+        <img src="images/img_ko.png" width=270px height=270px alt="">
+        <div class = "line-family"><h2>고은영
+        <a href="https://key9187.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
+        </div>
+      </div>   
+      <br clear=left>
+      <div class="one-third">
+        <img src="images/img_hong.png" width=270px height=270px alt="">
+        <div class = "line-family"><h2>홍성철
+        <a href="https://chulhongsung.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
+        </div>
+      </div>
+      <div class="one-third">
+        <img src="images/img_cho.png" width=270px height=270px alt="">
+        <div class = "line-family"><h2>조연선
+        <a href="https://dustjs17.github.io/"  target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
+        </div>
+      </div>
+      <div class="one-third">
+        <img src="images/img_han.png" width=270px height=270px alt="">
+        <div class = "line-family"><h2>한이정
+        <a href="#" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
+        </div>
+      </div>  
+  </div>
+  <div class = "line-bottom">
+    <h2>FAMILY</h2>
   </div>
     <div class = "columns">
         <div class = "one-half imgeff"><img src="images/shanghai.jpg" alt=""></div>
-        <div class="one-half">
-            <div class="row second-up">
-                <div class="one-half"><img src="images/img_moon.png" width=350px height=230px alt="">
-                    <div class = "line-family">
-                        <h2>문상준
-                            <a href="https://monster-moon.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> 
-                        </h2>
-                    </div>
-                </div>
-                <div class="one-half"><img src="images/img_cho.png" width=350px height=230px alt="">
-                     <div class = "line-family">
-                         <h2>조연선
-                             <a href="https://dustjs17.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> 
-                         </h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row second-up">
-                <div class="one-half"><img src="images/img_hong.png" width=350px height=230px alt="">
-                    <div class = "line-family">
-                        <h2>홍성철
-                          <a href="https://chulhongsung.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> 
-                        </h2>
-                    </div>
-                </div>
-                <div class="one-half"><img src="images/img_ko.png" width=350px height=230px alt="">
-                     <div class = "line-family">
-                         <h2>고은영
-                             <a href="https://key9187.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a>                              
-                         </h2>
-                    </div>
-                </div>
-            </div>            
-        </div>
-    </div>
-<div>
- <br clear=left>
- <p>가낟라마바사아</p>
-</div>
+        <div class = "one-half imgeff"></div>
+        </div>    
+
 </section>
 </body>
 </html>
