--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       <li>
         <ul>
           <li><a href="index.html">about</a></li>
-          <li><a href="projets.html">works</a></li>
+          <li><a href="projets.html">lab</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
       </li>
