--- a/projets.html
+++ b/projets.html
@@ -55,7 +55,7 @@
       <div class="one-third">
         <img src="images/img_moon.png" width=270px height=270px alt="">
         <div class = "line-family"><h2>문상준
-        <a href="http://ranking.uos.ac.kr/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
+        <a href="https://monster-moon.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
         </div>
       </div>
       <div class="one-third">
@@ -85,7 +85,7 @@
       </div>  
   </div>
   <div class = "line-bottom">
-    <h2>FAMILY</h2>
+    <h2>PHOTO</h2>
   </div>
     <div class = "columns">
         <div class = "one-half imgeff"><img src="images/shanghai.jpg" alt=""></div>
