--- a/projets.html
+++ b/projets.html
@@ -10,11 +10,11 @@
 <link rel="stylesheet" href="css/github-activity-0.1.5.min.css">
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
 <script type="text/javascript" src="js/github-activity-0.1.5.min.js"></script>
-<!--google font style-->    
-<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
+<!--google font style-->
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <!--font-family: 'Open Sans', sans-serif;-
 <!-- font icon css style-->
-<link rel="stylesheet" href="css/open-sans-v15-latin.min.css">       
+<link rel="stylesheet" href="css/open-sans-v15-latin.min.css">
 </head>
 <body>
 <header>
@@ -36,9 +36,10 @@
         <div class="two-third">
             <br clear=left>
             <li> 09/20/2018, IJeong Han, For Github Desktop beginner, <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
+            <li> 07/30/2019, IJeong Han, Ways to collaborate in Github, <a href = 'labworks/github_collaborate.pdf'>slide</a>  </li>
         </div>
         <div class="one-third">
-            
+
         </div>
     </div>
   <div class = "line-bottom">
@@ -63,7 +64,7 @@
         <div class = "line-family"><h2>고은영
         <a href="https://key9187.github.io/" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
         </div>
-      </div>   
+      </div>
       <br clear=left>
       <div class="one-third">
         <img src="images/img_hong.png" width=270px height=270px alt="">
@@ -82,7 +83,7 @@
         <div class = "line-family"><h2>한이정
         <a href="#" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
         </div>
-      </div>  
+      </div>
   </div>
   <div class = "line-bottom">
     <h2>PHOTO</h2>
@@ -90,7 +91,7 @@
     <div class = "columns">
         <div class = "one-half imgeff"><img src="images/shanghai.jpg" alt=""></div>
         <div class = "one-half imgeff"></div>
-        </div>    
+        </div>
 
 </section>
 </body>
