update About ME

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <!--github activity-->
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
 <link rel="stylesheet" href="css/github-activity-0.1.5.min.css">
-<!--google font style-->    
-<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
+<!--google font style-->
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <!--font-family: 'Open Sans', sans-serif;-->
 <!-- font icon css style-->
 <link rel="stylesheet" href="css/open-sans-v15-latin.min.css">
@@ -49,21 +49,21 @@
       <img src="images/file_2jeong.png" alt="" align="left">
       <h3>Skills</h3>
       <br clear=left>
-      <p>I am familiar with R. I get started learning Python for data science. </p>
+      <p>I get started learning Python for data science. </p>
       <div class="container">
         <div class="imgeff"><a href="#"><img src="images/R_2jeong.PNG" alt="" ></a></div>
         <div class="imgeff"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>
-        <div class="imgeff"><a href="#"><img src="images/sas_2jeong.PNG" alt=""></a></div>
+        <div class="imgeff"><a href="#"><img src="images/html_2jeong.PNG" alt=""></a></div>
       </div>
     </div>
     <div class="third-left">
       <img src="images/graduate_2jeong.png" alt="" align="left">
       <h3>Education</h3>
       <br clear=left>
-        <p>Master's Course of Statistics (2018.3~) </p>
-        <p>University of Seoul</p>
-        <p>Bachelor Degrees of Statistics (2014.3~2018.2)</p>
-        <p>Dongguk University </p>
+        <p>Master's Course of Statistics (Double Major with Economics) </p>
+        <p>University of Seoul (2018.3~) </p>
+        <p>Bachelor Degrees of Statistics</p>
+        <p>Dongguk University (2014.3~2018.2)</p>
     </div>
   </div>
   <!--portfolio start-->
