move GITHUB portfolio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li>
         <ul>
           <li><a href="index.html" class="active">about</a></li>
-          <li><a href="projets.html">lab</a></li>
+          <li><a href="projets.html">works</a></li>
         </ul>
       </li>
     </ul>
@@ -60,29 +60,7 @@
       <img src="images/graduate_2jeong.png" alt="" align="left">
       <h3>Education</h3>
       <br clear=left>
-        <p>Master's Course of Statistics (Double Major with Economics) </p>
-        <p>University of Seoul (2018.3~) </p>
-        <p>Bachelor Degrees of Statistics</p>
-        <p>Dongguk University (2014.3~2018.2)</p>
+        <p>M.S., Statistics (Double Major with Economics), University of Seoul (2018.3~) </p>
+        <p>B.S., Statistics, Dongguk University (2014.3~2018.2)</p>
     </div>
   </div>
-  <!--portfolio start-->
-  <div class = "line-bottom">
-    <h2>GITHUB WORKS</h2>
-  </div>
-  <div class = 'protfolio'>
-    <div class = 'row' style='margin: 0 auto 30px auto;'>
-    <div id="feed" style = 'margin: 0 50px;'>
-        <script>
-            GitHubActivity.feed({
-            username: "12jeong",
-            selector: "#feed",
-            limit: 5
-            });
-        </script>
-    </div>
-    </div>
-  </div>
-</section>
-</body>
-</html>
