--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="shortcut icon" type="image⁄x-icon" href="images/homepage.png">
-<!--google font style-->    
-<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
+<!--google font style-->
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <!--font-family: 'Open Sans', sans-serif;-->
 <!-- font icon css style-->
-<link rel="stylesheet" href="css/open-sans-v15-latin.min.css">    
+<link rel="stylesheet" href="css/open-sans-v15-latin.min.css">
 </head>
 <body>
 <header>
@@ -18,8 +18,7 @@
       <li>
         <ul>
           <li><a href="index.html">about</a></li>
-          <li><a href="projets.html">lab</a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
+          <li><a href="projets.html">works</a></li>
         </ul>
       </li>
     </ul>
