--- a/projets.html
+++ b/projets.html
@@ -21,7 +21,7 @@
   <nav class="main-nav">
     <ul>
       <li><a href="index.html">about</a></li>
-      <li><a href="projets.html" class="active">lab</a></li>
+      <li><a href="projets.html" class="active">works</a></li>
     </ul>
   </nav>
 </header>
@@ -93,6 +93,27 @@
         <div class = "one-half imgeff"></div>
         </div>
 
+</section>
+</body>
+</html>
+
+<!--portfolio start-->
+<div class = "line-bottom">
+  <h2>GITHUB WORKS</h2>
+</div>
+<div class = 'protfolio'>
+  <div class = 'row' style='margin: 0 auto 30px auto;'>
+  <div id="feed" style = 'margin: 0 50px;'>
+      <script>
+          GitHubActivity.feed({
+          username: "12jeong",
+          selector: "#feed",
+          limit: 5
+          });
+      </script>
+  </div>
+  </div>
+</div>
 </section>
 </body>
 </html>
