--- a/projets.html
+++ b/projets.html
@@ -15,6 +15,8 @@
 <!--font-family: 'Open Sans', sans-serif;-
 <!-- font icon css style-->
 <link rel="stylesheet" href="css/open-sans-v15-latin.min.css">
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+<script type="text/javascript" src="js/github-activity-0.1.5.min.js"></script>
 </head>
 <body>
 <header>
