--- a/projets.html
+++ b/projets.html
@@ -37,6 +37,9 @@
     <div class="colunms">
         <div class="two-third">
             <br clear=left>
+            <h3> Presentation </h3>
+            <li> ㅇㅅㅇ <li>
+            <h3> Reference </h3>
             <li> 09/20/2018, IJeong Han, For Github Desktop beginner, <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
             <li> 07/30/2019, IJeong Han, Ways to collaborate in Github, <a href = 'labworks/github_collaborate.pdf'>slide</a>  </li>
         </div>
