--- a/projets.html
+++ b/projets.html
@@ -38,7 +38,9 @@
         <div class="two-third">
             <br clear=left>
             <h3> Presentation </h3>
-            <li> ㅇㅅㅇ <li>
+            <li> Application of regularization method to the nonstationary GEV distribution. <i>The Korean Statistical Society Fall Conference</i>, Seoul, Korea, November 2019. </li>
+            <h3> Honors and Awards </h3>
+            <li> Oral presentation award: Application of regularization method to the nonstationary GEV distribution. <i>The korean statistical society</i>, November 2019.</li>
             <h3> Reference </h3>
             <li> 09/20/2018, IJeong Han, For Github Desktop beginner, <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
             <li> 07/30/2019, IJeong Han, Ways to collaborate in Github, <a href = 'labworks/github_collaborate.pdf'>slide</a>  </li>
