--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container">
         <div class="imgeff"><a href="#"><img src="images/R_2jeong.PNG" alt="" ></a></div>
         <div class="imgeff"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>
-        <div class="imgeff"><a href="#"><img src="images/html_2jeong.PNG" alt=""></a></div>
+        <div class="imgeff"><a href="#"><img src="images/html_2jeong.png" alt=""></a></div>
       </div>
     </div>
     <div class="third-left">
