--- a/projets.html
+++ b/projets.html
@@ -103,10 +103,10 @@
 
 <!--portfolio start-->
 <div class = "line-bottom">
-  <h2>GITHUB WORKS</h2>
+  <h2>GITHUB</h2>
 </div>
 <div class = 'protfolio'>
-  <div class = 'row' style='margin: 0 auto 30px auto;'>
+  <div class = 'row' style='margin: 250px auto 250px auto;'>
   <div id="feed" style = 'margin: 0 50px;'>
       <script>
           GitHubActivity.feed({
