--- a/projets.html
+++ b/projets.html
@@ -43,8 +43,9 @@
             <li> Oral presentation award (3rd place), Application of regularization method to the nonstationary GEV distribution. <i>The korean statistical society</i>, November 2019</li>
             &nbsp;
             <h3> Reference </h3>
-            <li> 09/20/2018, IJeong Han, For Github Desktop beginner <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
+            <li> 12/19/2019, IJeong Han, Spatial Analysis of Extreme Value using a Smoothing Spline Regression <a href = 'labworks/academic_thesis.pdf'>slide</a>  </li>
             <li> 07/30/2019, IJeong Han, Ways to collaborate in Github <a href = 'labworks/github_collaborate.pdf'>slide</a>  </li>
+            <li> 09/20/2018, IJeong Han, For Github Desktop beginner <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
     </div>
   <div class = "line-bottom">
     <h2>FAMILY</h2>
@@ -106,7 +107,7 @@
   <h2>GITHUB</h2>
 </div>
 <div class = 'protfolio'>
-  <div class = 'row' style='margin: 250px auto 250px auto;'>
+  <div class = 'row' style='margin: 30px 250px 30px 250px;'>
   <div id="feed" style = 'margin: 0 50px;'>
       <script>
           GitHubActivity.feed({
