--- a/projets.html
+++ b/projets.html
@@ -43,7 +43,7 @@
             <li> Oral presentation award (3rd place), Application of regularization method to the nonstationary GEV distribution. <i>The korean statistical society</i>, November 2019</li>
             &nbsp;
             <h3> Reference </h3>
-            <li> 12/19/2019, IJeong Han, Spatial Analysis of Extreme Value using a Smoothing Spline Regression <a href = 'labworks/academic_thesis.pdf'>slide</a>  </li>
+            <li> 12/19/2019, IJeong Han, Spatial analysis of extreme value using a smoothing spline regression <a href = 'labworks/academic_thesis.pdf'>slide</a>  </li>
             <li> 07/30/2019, IJeong Han, Ways to collaborate in Github <a href = 'labworks/github_collaborate.pdf'>slide</a>  </li>
             <li> 09/20/2018, IJeong Han, For Github Desktop beginner <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
     </div>
@@ -102,7 +102,7 @@
           <h2>GITHUB</h2>
         </div>
         <div class = 'protfolio'>
-          <div class = 'row' style='margin: 30px 500px 30px 250px;'>
+          <div class = 'row' style='margin: 30px auto 30px auto;'>
           <div id="feed" style = 'margin: 0 50px;'>
               <script>
                   GitHubActivity.feed({
