--- a/projets.html
+++ b/projets.html
@@ -37,15 +37,32 @@
     <div class="colunms">
             <br clear=left>
             <h3> Presentation </h3>
-            <li> Application of regularization method to the nonstationary GEV distribution. <i>The Korean Statistical Society Fall Conference</i>, Seoul, Korea, November 2019 <a href = 'labworks/regularization_GEV.pdf'>slide</a>  </li> </li>
+            <li style="font-size:15px" > Application of regularization method to the nonstationary GEV distribution. <i>The Korean Statistical Society Fall Conference</i>, Seoul, Korea, November 2019 <a href = 'labworks/regularization_GEV.pdf'>slide</a>  </li> </li>
             &nbsp;
             <h3> Honors and Awards </h3>
             <li> Oral presentation award (3rd place), Application of regularization method to the nonstationary GEV distribution. <i>The korean statistical society</i>, November 2019</li>
             &nbsp;
             <h3> Reference </h3>
             <li> 12/19/2019, IJeong Han, Spatial analysis of extreme value using a smoothing spline regression <a href = 'labworks/academic_thesis.pdf'>slide</a>  </li>
-            <li> 07/30/2019, IJeong Han, Ways to collaborate in Github <a href = 'labworks/github_collaborate.pdf'>slide</a>  </li>
-            <li> 09/20/2018, IJeong Han, For Github Desktop beginner <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
+            <li> 07/30/2019, IJeong Han, How to collaborate on Github <a href = 'labworks/github_collaborate.pdf'>slide</a>  </li>
+            <li> 09/20/2018, IJeong Han, An Intro to Github Desktop beginner <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
+    </div>
+    <!--portfolio start-->
+    <div class = "line-bottom">
+      <h2>GITHUB</h2>
+    </div>
+    <div class = 'protfolio'>
+      <div class = 'row' style='margin: 30px auto 30px auto;'>
+      <div id="feed" style = 'margin: 0 50px;'>
+          <script>
+              GitHubActivity.feed({
+              username: "12jeong",
+              selector: "#feed",
+              limit: 5
+              });
+          </script>
+      </div>
+      </div>
     </div>
   <div class = "line-bottom">
     <h2>FAMILY</h2>
@@ -96,23 +113,6 @@
     <div class = "columns">
         <div class = "one-half imgeff"><img src="images/shanghai.jpg" alt=""></div>
         <div class = "one-half imgeff"></div>
-        </div>
-        <!--portfolio start-->
-        <div class = "line-bottom">
-          <h2>GITHUB</h2>
-        </div>
-        <div class = 'protfolio'>
-          <div class = 'row' style='margin: 30px auto 30px auto;'>
-          <div id="feed" style = 'margin: 0 50px;'>
-              <script>
-                  GitHubActivity.feed({
-                  username: "12jeong",
-                  selector: "#feed",
-                  limit: 5
-                  });
-              </script>
-          </div>
-          </div>
         </div>
 </section>
 </body>
