--- a/links.html
+++ b/links.html
@@ -19,6 +19,7 @@
         <ul>
           <li><a href="index.html">about</a></li>
           <li><a href="projets.html">works</a></li>
+          <li><a href="links.html">links</a></li>
         </ul>
       </li>
     </ul>
