--- a/projets.html
+++ b/projets.html
@@ -24,6 +24,7 @@
     <ul>
       <li><a href="index.html">about</a></li>
       <li><a href="projets.html" class="active">works</a></li>
+      <li><a href="links.html">links</a></li>               
     </ul>
   </nav>
 </header>
@@ -112,6 +113,7 @@
   </div>
     <div class = "columns">
         <div class = "one-half imgeff"><img src="images/shanghai.jpg" alt=""></div>
+        <div class="one-harf"> Shanghai, 2019 </div>
         <div class = "one-half imgeff"></div>
         </div>
 </section>
