--- a/links.html
+++ b/links.html
@@ -1,49 +1,48 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Welcome 12jeong's | Contact</title>
+<title>Welcome 12jeong's | Links</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="shortcut icon" type="image⁄x-icon" href="images/homepage.png">
+<!--github activity-->
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
+<link rel="stylesheet" href="css/github-activity-0.1.5.min.css">
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+<script type="text/javascript" src="js/github-activity-0.1.5.min.js"></script>
 <!--google font style-->
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-<!--font-family: 'Open Sans', sans-serif;-->
+<!--font-family: 'Open Sans', sans-serif;-
 <!-- font icon css style-->
 <link rel="stylesheet" href="css/open-sans-v15-latin.min.css">
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+<script type="text/javascript" src="js/github-activity-0.1.5.min.js"></script>
 </head>
 <body>
 <header>
   <nav class="main-nav">
     <ul>
-      <li>
-        <ul>
-          <li><a href="index.html">about</a></li>
-          <li><a href="projets.html">works</a></li>
-          <li><a href="links.html">links</a></li>
-        </ul>
-      </li>
+      <li><a href="index.html">about</a></li>
+      <li><a href="projets.html" class="active">works</a></li>
+      <li><a href="links.html">links</a></li>
     </ul>
   </nav>
 </header>
-<section id="home-head" class="contact">
+<section id="home-head" class="work">
   <h1> </h1>
 </section>
 <section id="main-content">
   <div class="text-intro">
-    <h2>Contact</h2>
+    <h2>WORKS</h2>
   </div>
-  <div class="columns features">
-    <form action="#" method="post" id="contact-form">
-      <textarea id="message" maxlength="10000" name="message" placeholder="If you want something to be built or just to say hi, feel free to shoot me a message."></textarea>
-      <div class="crayonico"></div>
-      <input class="text-input" id="senderEmail" maxlength="50" name="email" placeholder="haniijeong827@gmail.com" type="email">
-      <div class="emailico"></div>
-      <input class="btn btn-input" id="sendMessage" name="sendMessage" type="submit" value="IM DONE">
-    </form>
-  </div>
+    <div class="colunms">
+            <br clear=left>
+            <h3> Data </h3>
+            <li style="font-size:15px"> 서울열린데이터광장 <a href = 'http://data.seoul.go.kr/'>slide</a>  </li>
+    </div>
+
+
+
 </section>
-<footer>
-  <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow" href="http://www.iamsupview.be">Supview</a>.</small></div>
-</footer>
 </body>
 </html>
