--- a/links.html
+++ b/links.html
@@ -33,12 +33,11 @@
 </section>
 <section id="main-content">
   <div class="text-intro">
-    <h2>WORKS</h2>
+    <h2>Data</h2>
   </div>
     <div class="colunms">
             <br clear=left>
-            <h3> Data </h3>
-            <li style="font-size:15px"> 서울열린데이터광장 <a href = 'http://data.seoul.go.kr/'>slide</a>  </li>
+            <li style="font-size:30px"> 서울열린데이터광장 <a href = 'http://data.seoul.go.kr/' target="_blank">here</a>  </li>
     </div>
 
 
