--- a/links.html
+++ b/links.html
@@ -37,7 +37,7 @@
   </div>
     <div class="colunms">
             <br clear=left>
-            <li style="font-size:30px"> 서울열린데이터광장 <a href = 'http://data.seoul.go.kr/' target="_blank">here</a>  </li>
+            <li style="font-size:20px"> <a href = 'http://data.seoul.go.kr/' target="_blank"> 서울열린데이터광장</a>  </li>
     </div>
 
 
