--- a/projets.html
+++ b/projets.html
@@ -24,7 +24,7 @@
     <ul>
       <li><a href="index.html">about</a></li>
       <li><a href="projets.html" class="active">works</a></li>
-      <li><a href="links.html">links</a></li>               
+      <li><a href="links.html">links</a></li>
     </ul>
   </nav>
 </header>
@@ -47,6 +47,7 @@
             <li style="font-size:15px"> 12/19/2019, IJeong Han, Spatial analysis of extreme value using a smoothing spline regression <a href = 'labworks/academic_thesis.pdf'>slide</a>  </li>
             <li style="font-size:15px"> 07/30/2019, IJeong Han, How to collaborate on Github <a href = 'labworks/github_collaborate.pdf'>slide</a>  </li>
             <li style="font-size:15px"> 09/20/2018, IJeong Han, An Intro to Github Desktop beginner <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
+            &nbsp;
     </div>
     <!--portfolio start-->
     <div class = "line-bottom">
