--- a/projets.html
+++ b/projets.html
@@ -114,9 +114,12 @@
   </div>
     <div class = "columns">
         <div class = "one-half imgeff"><img src="images/shanghai.jpg" alt=""></div>
-        <div class="one-harf"> Shanghai, 2019 </div>
         <div class = "one-half imgeff"></div>
-        </div>
+    </div>
+    <div class = "columns">
+        <div class = "one-half"> Shanghai, 2019 </div>
+        <div class = "one-half"></div>
+    </div>
 </section>
 </body>
 </html>
