--- a/projets.html
+++ b/projets.html
@@ -99,13 +99,13 @@
       <div class="one-third">
         <img src="images/img_cho.png" width=270px height=270px alt="">
         <div class = "line-family"><h2>조연선
-        <a href="https://dustjs17.github.io/"  target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
+        <a href="#"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
         </div>
       </div>
       <div class="one-third">
         <img src="images/img_han.png" width=270px height=270px alt="">
         <div class = "line-family"><h2>한이정
-        <a href="#" target="_blank"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
+        <a href="#"><img src="images/house.png" width=20px height=20px alt="" align="right"></a> </h2>
         </div>
       </div>
   </div>
