--- a/links.html
+++ b/links.html
@@ -39,8 +39,23 @@
             <br clear=left>
             <li style="font-size:20px"> <a href = 'http://data.seoul.go.kr/' target="_blank"> 서울열린데이터광장</a>  </li>
     </div>
-
-
+    <div class="text-intro">
+      <h2>R</h2>
+    </div>
+      <div class="colunms">
+              <br clear=left>
+              <li style="font-size:20px"> <a href = 'https://rstudio.com/resources/cheatsheets/' target="_blank"> RStudio Cheat Sheets </a>  </li>
+              <li style="font-size:20px"> <a href = 'http://adv-r.had.co.nz/Environments.html' target="_blank"> Advanced R </a>  </li>
+              <li style="font-size:20px"> <a href = 'https://www.stat.berkeley.edu/~s133/dates.html' target="_blank"> Dates and Times in R </a>  </li>
+              <li style="font-size:20px"> <a href = 'labworks/data-transformation.pdf' target="_blank"> Data Transformation with dplyr : CHEAT SHEET  </a>  </li>
+      </div>
+      <div class="text-intro">
+        <h2>Python</h2>
+      </div>
+        <div class="colunms">
+                <br clear=left>
+                <li style="font-size:20px"> <a href = 'https://pandas.pydata.org/pandas-docs/stable/pandas.pdf' target="_blank"> pandas: powerful Python data analysis toolkit </a>  </li>
+        </div>
 
 </section>
 </body>
