--- a/projets.html
+++ b/projets.html
@@ -41,10 +41,12 @@
             <li style="font-size:15px" > Application of regularization method to the nonstationary GEV distribution. <i>The Korean Statistical Society Fall Conference</i>, Seoul, Korea, November 2019 <a href = 'labworks/regularization_GEV.pdf'>slide</a>  </li> </li>
             &nbsp;
             <h3> Honors and Awards </h3>
-            <li style="font-size:15px"> Oral presentation award (3rd place), Application of regularization method to the nonstationary GEV distribution. <i>The korean statistical society</i>, November 2019</li>
+            <li style="font-size:15px"> Oral presentation award (3rd place), Application of regularization method to the nonstationary GEV distribution. <i>The korean statistical society</i>, November 2019 <a href = 'labworks/abstract_regularization_GEV.pdf'> abstract </a> </li>
             &nbsp;
             <h3> Reference </h3>
             <li style="font-size:15px"> 12/19/2019, IJeong Han, Spatial analysis of extreme value using a smoothing spline regression <a href = 'labworks/academic_thesis.pdf'>slide</a>  </li>
+            <li style="font-size:15px"> 12/12/2018, IJeong Han, Thin plate splines <a href = 'labworks/Thin_plate_splines.pdf'>slide</a>  </li>
+            <li style="font-size:15px"> 05/27/2019, IJeong Han, Bayesian Deep Learning for recommender system <a href = 'labworks/BNN_review3.pdf'>slide</a>  </li>
             <li style="font-size:15px"> 07/30/2019, IJeong Han, How to collaborate on Github <a href = 'labworks/github_collaborate.pdf'>slide</a>  </li>
             <li style="font-size:15px"> 09/20/2018, IJeong Han, An Intro to Github Desktop beginner <a href = 'labworks/github_desktop.pdf'>slide</a>  </li>
             &nbsp;
