--- a/links.html
+++ b/links.html
@@ -23,8 +23,8 @@
   <nav class="main-nav">
     <ul>
       <li><a href="index.html">about</a></li>
-      <li><a href="projets.html" class="active">works</a></li>
-      <li><a href="links.html">links</a></li>
+      <li><a href="projets.html">works</a></li>
+      <li><a href="links.html" class="active" >links</a></li>
     </ul>
   </nav>
 </header>
@@ -61,6 +61,16 @@
                 <li style="font-size:20px"> <a href = 'https://docs.scipy.org/doc/scipy/reference/tutorial/' target="_blank"> SciPy Tutorial </a>  </li>
                 &nbsp;
         </div>
+        <div class="text-intro">
+          <h3> Latex </h3>
+        </div>
+          <div class="colunms">
+                  <br clear=left>
+                  <li style="font-size:20px"> <a href = 'https://ko.wikipedia.org/wiki/%EC%9C%84%ED%82%A4%EB%B0%B1%EA%B3%BC:TeX_%EB%AC%B8%EB%B2%95' target="_blank"> 위키백과:TeX 문법 </a>  </li>
+                  <li style="font-size:20px"> <a href = 'https://en.wikibooks.org/wiki/LaTeX/Colors' target="_blank"> LaTeX/Colors </a>  </li>
+                  <li style="font-size:20px"> <a href = 'http://www.tablesgenerator.com/' target="_blank"> LaTeX Tables Generator </a>  </li>
+                  &nbsp;
+          </div>
 
 </section>
 </body>
